--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr>
     <h2>Olá! esse é o meu primeiro repositório de sites</h2>
     
-    <h2>Tentando ser melhor sempre</h2>
+    <h2>Tentando ser melhor sempre!</h2>
 
 
 </body>
